feat: implement complete Neural LAB website with Next.js
- Implement Next.js 15 with App Router and TypeScript
- Add bilingual support (PT/EN) with next-intl
- Configure Tailwind CSS with custom design system
- Integrate shadcn/ui components for consistent UI
- Set up Contentlayer for MDX content management
- Create responsive mobile-first design
- Implement SEO optimization with metadata and sitemap
- Add accessibility features with semantic HTML and ARIA
- Build complete navigation with language switcher
- Create service pages with detailed offerings
- Add portfolio section with project showcases
- Implement contact form with Zod validation
- Configure deployment settings for Vercel
- Update documentation with bilingual README

This establishes the foundation for Neural LAB's web presence
with professional design, international accessibility, and
optimized performance for both desktop and mobile users.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,29 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# contentlayer
+.contentlayer
+
+# Claude Code files
+.claude/
+CLAUDE.md
+*.claude
+.claude-*
+
+# VS Code
+.vscode/
+
+# IDEs
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+Thumbs.db
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
