--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "contentlayer dev & next dev --turbopack",
-    "build": "contentlayer build && next build",
+    "dev": "next dev --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
-    "contentlayer": "contentlayer build",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
@@ -17,12 +16,8 @@
     "@radix-ui/react-icons": "^1.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "contentlayer": "^0.3.4",
-    "date-fns": "^4.1.0",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
-    "next-contentlayer": "^0.3.4",
-    "next-intl": "^4.3.4",
     "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
