--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@next/third-parties": "^15.5.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@react-three/drei": "^10.7.3",
     "@react-three/fiber": "^9.3.0",
